# agent-under-the-hood

./: .gitignore  README.md
agent_harness_demo/: .env.example  .gitignore  README.md  diagrams.html  diagrams_phase2.html  pyproject.toml
agent_harness_demo/agent_harness/: __init__.py  __main__.py  audit.py  cli.py  config.py  gateway.py  policy.py  runner.py  tools.py  trace.py  types.py
agent_harness_demo/agent_harness/eval/: __init__.py  cases.py  runner.py  types.py
agent_harness_demo/tests/: conftest.py  test_agent_loop.py  test_audit_logger.py  test_eval_runner.py  test_model_gateway.py  test_tool_policy.py  test_tool_runtime.py  test_trace_recorder.py  test_trace_tree.py
docs/superpowers/specs/: 2026-07-14-agent-multi-model-demo-design.md
