[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness-demo"
version = "0.1.0"
description = "最小 Agent Harness 闭环：用于学习企业级 Agent 平台的基础结构"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[tool.setuptools.packages.find]
include = ["agent_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
